[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/button/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/main_menu/main_menu.gd" type="Script" id=4]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://gui/menu_background/menu_background.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[node name="credits_menu" type="Node2D"]
script = ExtResource( 4 )

[node name="menu_background" parent="." instance=ExtResource( 6 )]

[node name="vbox_container" type="VBoxContainer" parent="."]
margin_left = 61.0
margin_top = 286.0
margin_right = 938.0
margin_bottom = 1029.0
custom_constants/separation = 15

[node name="RichTextLabel" type="RichTextLabel" parent="vbox_container"]
margin_right = 877.0
margin_bottom = 628.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]
[color=red]Game Designer[/color]
Raul Iglesias Julios
[color=red]Programmers[/color]
Audrey Diaz Armas
Moises José Bonilla Caraballo
[color=red]Character designers and Animators[/color]
Victoria Naranjo Gonzalez
Alejandro Perdomo Cano
Alejandro Cardenas Alamo
Laura Ruiz Almarza
Sophie Nikifaravetz
[color=red]Community and marketing managers[/color]
Alessandro Grimon Nuñes
Sophie Nikifaravetz
[/center]"
text = "
Game Designer
Raul Iglesias Julios
Programmers
Audrey Diaz Armas
Moises José Bonilla Caraballo
Character designers and Animators
Victoria Naranjo Gonzalez
Alejandro Perdomo Cano
Alejandro Cardenas Alamo
Laura Ruiz Almarza
Sophie Nikifaravetz
Community and marketing managers
Alessandro Grimon Nuñes
Sophie Nikifaravetz
"

[node name="return_to_main_menu" parent="vbox_container" instance=ExtResource( 3 )]
margin_top = 643.0
margin_right = 877.0
margin_bottom = 743.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
text = "Return to main menu"

[connection signal="pressed" from="vbox_container/return_to_main_menu" to="." method="_on_return_to_main_menu_pressed"]
