[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/menu_background/menu_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/button/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/main_menu/main_menu.gd" type="Script" id=4]

[node name="main_menu" type="Node2D"]
script = ExtResource( 4 )

[node name="menu_background" parent="." instance=ExtResource( 1 )]

[node name="vbox_container" type="VBoxContainer" parent="."]
margin_left = 150.0
margin_top = 485.0
margin_right = 618.0
margin_bottom = 758.0
custom_constants/separation = 15

[node name="play" parent="vbox_container" instance=ExtResource( 3 )]
margin_right = 468.0
margin_bottom = 129.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="credits" parent="vbox_container" instance=ExtResource( 3 )]
margin_top = 144.0
margin_right = 468.0
margin_bottom = 273.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Credits"

[connection signal="pressed" from="vbox_container/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="vbox_container/credits" to="." method="_on_credits_pressed"]
